# stockpulse

./: .env.example  README.md  pyproject.toml
src/reddit_ingestor/: __init__.py  __main__.py  comment_signal_service.py  config.py  db.py  main.py  market_data_provider.py  models.py  outcome_service.py  reddit_client.py  snapshot_service.py  ticker_catalog.py  ticker_extractor.py  yfinance_provider.py
src/reddit_ingestor/data/: us_tickers.txt
